# speechlab

./: .dockerignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
src/: server_main.py
src/speechlab/gstreamer/: base_pipeline.py  capture_pipeline.py  elements.py  pipeline_error.py  pipeline_thread.py
src/speechlab/preprocess/: handler.py  server.py
src/speechlab/preprocess/runorm/: client.py  config.py  handler.py  loader.py  model.py  protocol.py
src/speechlab/runner/: runner.py  worker.py
src/speechlab/stt/: client.py  handler.py  protocol.py  server.py  test_utils.py
src/speechlab/stt/gigaam/: __init__.py  config.py  decoder.py  decoding.py  encoder.py  handler.py  loader.py  model.py  model_onnx.py  preprocess.py  tokenizer.py  utils.py
src/speechlab/stt/gigaam/mel_spectrogram/: librosa.py  torch.py
src/speechlab/transport/: client.py  config.py  handler.py  loader.py  message.py  server.py
src/speechlab/tts/: handler.py  server.py
src/speechlab/tts/fish_speech/: audio_manager.py  client.py  config.py  handler.py  loader.py  model.py  protocol.py
src/speechlab/tts/silero/: client.py  config.py  handler.py  loader.py  model.py  protocol.py
src/speechlab/tts/xtts/: client.py  config.py  handler.py  loader.py  model.py  protocol.py
src/speechlab/utils/: audio.py  download.py  load_gpu.py
src/speechlab/vad/silero/: __init__.py  config.py  loader.py  model.py  onnx_model.py  torch_model.py
